Fix image overlap issues

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -101,7 +101,7 @@ h4 {
 }
 
 .back {
-    padding-left: 20%;
+    margin-left: 20%;
 }
 
 .title {
