--- a/src/pages/Project/Project.css
+++ b/src/pages/Project/Project.css
@@ -1,8 +1,16 @@
 .single-project-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin: 0 10%;
   height: 80vh;
 }
@@ -13,10 +21,18 @@
 }
 
 .single-project-container .sp-technologies {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .single-project-container .sp-technologies p {
@@ -24,23 +40,39 @@
 }
 
 .single-project-container .sp-technologies span {
-  margin: 3px;
+  margin-top: 3px;
   text-align: center;
 }
 
 .single-project-container .sp-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 .single-project-container .sp-description-container,
 .single-project-container .sp-image-container {
-  padding-top: 5%;
+  padding-top: 1%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .single-project-container .sp-description-container .sp-description,
@@ -65,12 +97,13 @@
   }
   .single-project-container .sp-image-container .sp-image {
     width: 100%;
-    height: 60%;
+    height: 70%;
   }
   .single-project-container .sp-image-container .sp-image img {
     max-height: 400px;
     border-radius: 5px;
-    object-fit: cover;
+    -o-object-fit: contain;
+       object-fit: contain;
     width: 100%;
   }
   .single-project-container .sp-image-container .sp-links {
@@ -80,6 +113,9 @@
 }
 
 @media only screen and (max-width: 1000px) {
+  .single-project-container {
+    padding-bottom: 5%;
+  }
   .single-project-container .sp-description-container {
     width: 100%;
   }
@@ -93,21 +129,47 @@
     width: 80%;
   }
   .single-project-container .sp-image-container {
-    width: 100%;
+    width: 75%;
   }
   .single-project-container .sp-image-container .sp-image {
-    width: 90%;
-    height: 70%;
+    width: 100%;
+    height: 75%;
   }
   .single-project-container .sp-image-container .sp-image img {
-    max-height: 300px;
+    max-height: 400px;
     border-radius: 5px;
-    object-fit: cover;
+    -o-object-fit: contain;
+       object-fit: contain;
     width: 100%;
   }
   .single-project-container .sp-image-container .sp-links {
     margin-top: 20px;
     width: 50%;
+  }
+}
+
+@media only screen and (max-height: 900px) {
+  .single-project-container .sp-image-container .sp-image img {
+    max-height: 300px;
+  }
+}
+
+@media only screen and (max-height: 700px) {
+  .single-project-container .sp-image-container .sp-image img {
+    max-height: 250px;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .single-project-container {
+    height: auto;
+  }
+  .single-project-container .sp-description-container .sp-technologies {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .single-project-container .sp-description-container .sp-description {
+    height: auto;
   }
 }
 /*# sourceMappingURL=Project.css.map */
